syntax = "proto3";

package credential.v1;
option go_package = "github.com/chanhlab/golang-service-example/generated/go/credential/v1;credentialv1";
import "google/protobuf/timestamp.proto";

message Credential {
  string id = 1;
  string key = 2;
  string status = 3;
  string value = 4;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message ListRequest {
  int64 offset = 1;
  int64 limit = 2;
}

message ListResponse {
  repeated Credential credentials = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Credential credential = 1;
}

message CreateRequest {
  string key = 1;
  string value = 2;
}

message CreateResponse {
  Credential credential = 1;
}

message UpdateRequest {
  string id = 1;
  string value = 2;
}

message UpdateResponse {
  Credential credential = 1;
}

message ActivateRequest {
  string id = 1;
}

message ActivateResponse {
  Credential credential = 1;
}

message DeactivateRequest {
  string id = 1;
}

message DeactivateResponse {
  Credential credential = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  google.protobuf.Timestamp deleted_at = 1;
}
