syntax = "proto3";

package go.chanhlab.com.services.v1.credential;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service CredentialService {
  // Credential list
  rpc List (ListCredentialRequest) returns (ListCredentialResponse) {
    option(google.api.http) = {
			get: "/v1/credentials"
		};
  }

  // Get Credential
  rpc Get (GetCredentialRequest) returns (GetCredentialResponse) {
    option(google.api.http) = {
      get: "/v1/credentials/{id}"
    };
  }

  // Create Credential
  rpc Create (CreateCredentialRequest) returns (CreateCredentialResponse) {
    option(google.api.http) = {
      post: "/v1/credentials"
      body: "*"
    };
  }

  // Update Credential
  rpc Update (UpdateCredentialRequest) returns (UpdateCredentialResponse) {
    option(google.api.http) = {
      put: "/v1/credentials/{id}"
      body: "*"
    };
  }

  // Activate Credential
  rpc Activate (GetCredentialRequest) returns (UpdateCredentialResponse) {
    option(google.api.http) = {
      put: "/v1/credentials/{id}/activate"
    };
  }

  // Deactivate Credential
  rpc Deactivate (GetCredentialRequest) returns (UpdateCredentialResponse) {
    option(google.api.http) = {
      put: "/v1/credentials/{id}/deactivate"
    };
  }

  // Delete Credential
  rpc Delete (DeleteCredentialRequest) returns (DeleteCredentialResponse) {
    option(google.api.http) = {
      delete: "/v1/credentials/{id}"
    };
  }
}

message Credential {
  string id = 1;
  string key = 2;
  string status = 3;
  string value = 4;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message ListCredentialRequest {
  int64 offset = 1;
  int64 limit = 2;
}

message ListCredentialResponse {
  repeated Credential credentials = 1;
}

message GetCredentialRequest {
  string id = 1;
}

message GetCredentialResponse {
  Credential credential = 1;
}

message CreateCredentialRequest {
  string key = 1;
  string value = 2;
}

message CreateCredentialResponse {
  Credential credential = 1;
}

message UpdateCredentialRequest {
  string id = 1;
  string value = 2;
}

message UpdateCredentialResponse {
  Credential credential = 1;
}

message DeleteCredentialRequest {
  string id = 1;
}

message DeleteCredentialResponse {
  google.protobuf.Timestamp deleted_at = 1;
}
